<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vehicleViewModel"
            type="com.mihir.vehiclelisting.viewmodel.ItemVehiclesViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/item_people"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="@{vehicleViewModel::onItemClick}"
        android:padding="@dimen/spacing_large">

        <android.support.v7.widget.CardView
            android:id="@+id/cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="?attr/card_view_back_color"
            card_view:cardCornerRadius="5dp"
            card_view:contentPadding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_people"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    tools:imageUrl="@{vehicleViewModel.pictureProfile}" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/label_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_large"
                        android:text="@{vehicleViewModel.fullName}"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="mr gary allen" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_large"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_interior"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/label_interior"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/spacing_large"
                            android:text="@{vehicleViewModel.interior}"
                            android:textColor='@{vehicleViewModel.interior.equals("UNACCEPTABLE") ? @android:color/holo_red_light : @android:color/holo_green_light}'
                            android:textSize="14sp"
                            tools:text="UNACCEPTABLE" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_large"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_exterior"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/label_exterior"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/spacing_large"
                            android:text="@{vehicleViewModel.exterior}"
                            android:textColor='@{vehicleViewModel.exterior.equals("UNACCEPTABLE") ? @android:color/holo_red_light : @android:color/holo_green_light}'
                            android:textSize="14sp"
                            tools:text="GOOD" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_large"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_engine_type"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/label_engine_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/spacing_large"
                            android:text="@{vehicleViewModel.engineType}"
                            android:textSize="14sp"
                            tools:text="CE" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_large"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_fuel"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/label_fuel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/spacing_large"
                            android:text="@{vehicleViewModel.fuel}"
                            android:textSize="14sp"
                            tools:text="100" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_large"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_address"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/label_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{vehicleViewModel.address}"
                            android:textSize="14sp"
                            tools:text="Lesserstraße 170, 22049 Hamburg" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

</layout>